Modified notebooks to work with the LazyIndexable class.

--- a/notebooks/flex_text_classification_tensorflow_demo.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_demo.ipynb
@@ -93,7 +93,7 @@
    "source": [
     "from flex.data import Dataset\n",
     "\n",
-    "flex_data = Dataset.from_tfds_text_dataset(train_data, X_columns='text', label_columns='label')"
+    "flex_data = Dataset.from_tfds_text_dataset(train_data, X_columns=['text'], label_columns=['label'])"
    ]
   },
   {
@@ -289,8 +289,7 @@
     "    print(\"Training model at client.\")\n",
     "    print(client_model)\n",
     "    model = client_model['model']\n",
-    "    X_data = client_data.X_data\n",
-    "    y_data = client_data.y_data\n",
+    "    X_data, y_data = client_data.to_numpy()\n",
     "    history = model.fit(X_data, y_data, epochs=epochs, batch_size=batch_size, verbose=0)"
    ]
   },
@@ -371,7 +370,7 @@
    "source": [
     "def aggregate_weights(agg_model, *args):\n",
     "    print(\"Aggregating weights\")\n",
-    "    averaged_weights = np.mean(np.array(agg_model['weights']), axis=0)\n",
+    "    averaged_weights = np.mean(np.array(agg_model['weights'], dtype=object), axis=0)\n",
     "    agg_model[\"model\"].set_weights(averaged_weights)\n",
     "    agg_model[\"weights\"] = []"
    ]
@@ -433,7 +432,7 @@
     "    model = model['model']\n",
     "    if data is not None:\n",
     "        print(\"Evaluating model at client.\")\n",
-    "        results_local = model.evaluate(data.X_data, data.y_data, verbose=0)\n",
+    "        results_local = model.evaluate(kwargs['test_examples'], kwargs['test_labels'], verbose=0)\n",
     "        print(f\"Results at client on client's data: {results_local}\")\n",
     "    else:\n",
     "        print(\"Evaluating model at server\")\n",
@@ -448,7 +447,8 @@
    "outputs": [],
    "source": [
     "# test_examples, test_labels = test_data\n",
-    "test_examples = Dataset.from_tfds_text_dataset(test_data, X_columns='text', label_columns='label')"
+    "test_examples = Dataset.from_tfds_text_dataset(test_data, X_columns=['text'], label_columns=['label'])\n",
+    "X_test, y_test = test_examples.to_numpy()"
    ]
   },
   {
@@ -457,7 +457,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "server.map(evaluate_model, test_examples=test_examples.X_data, test_labels=test_examples.y_data)"
+    "server.map(evaluate_model, test_examples=X_test, test_labels=y_test)"
    ]
   },
   {
@@ -466,7 +466,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clients.map(evaluate_model, test_examples=test_examples.X_data, test_labels=test_examples.y_data)"
+    "clients.map(evaluate_model, test_examples=X_test, test_labels=y_test)"
    ]
   },
   {
@@ -491,11 +491,11 @@
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i}\\n\")\n",
     "        pool.clients.map(train, batch_size=batch_size, epochs=epochs)\n",
-    "        pool.clients.map(evaluate_model, test_examples=test_examples.X_data, test_labels=test_examples.y_data)\n",
+    "        pool.clients.map(evaluate_model, test_examples=X_test, test_labels=y_test)\n",
     "        pool.aggregators.map(collect_weights, pool.clients)\n",
     "        pool.aggregators.map(aggregate_weights)\n",
     "        pool.servers.map(deploy_global_model_to_clients, pool.clients)\n",
-    "        pool.servers.map(evaluate_model, test_examples=test_examples.X_data, test_labels=test_examples.y_data)"
+    "        pool.servers.map(evaluate_model, test_examples=X_test, test_labels=y_test)"
    ]
   },
   {
@@ -533,7 +533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
