--- a/notebooks/flex_text_classification_tensorflow_with_decorators.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_with_decorators.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "from flex.data import Dataset\n",
     "\n",
-    "flex_data = Dataset.from_tfds_text_dataset(train_data, X_columns='text', label_columns='label')"
+    "flex_data = Dataset.from_tfds_text_dataset(train_data, X_columns=['text'], label_columns=['label'])"
    ]
   },
   {
@@ -94,7 +94,7 @@
     "@init_server_model\n",
     "def define_model(*args):\n",
     "    from copy import deepcopy\n",
-    "    # model = \"https://tfhub.dev/google/nnlm-en-dim110-with-normalization/2\"\n",
+    "    # model = \"https://tfhub.dev/google/nnlm-en-dim110-with-normalization/2\"\n",
     "    model = \"https://tfhub.dev/google/nnlm-en-dim50/2\"\n",
     "    hub_layer = hub.KerasLayer(model, input_shape=[], dtype=tf.string, trainable=True)\n",
     "    model = tf.keras.Sequential()\n",
@@ -176,7 +176,8 @@
    "outputs": [],
    "source": [
     "def fit_tf(client_flex_model, client_data, *args, **kwargs):\n",
-    "    client_flex_model[\"model\"].fit(client_data.X_data, client_data.y_data, *args, **kwargs)"
+    "    X_data, y_data = client_data.to_numpy()\n",
+    "    client_flex_model[\"model\"].fit(X_data, y_data, *args, **kwargs)"
    ]
   },
   {
@@ -226,7 +227,7 @@
    "source": [
     "@aggregate_weights\n",
     "def fed_avg(agg_model):\n",
-    "    return np.mean(np.array(agg_model), axis=0)"
+    "    return np.mean(np.array(agg_model, dtype=object), axis=0)"
    ]
   },
   {
@@ -277,8 +278,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data = Dataset.from_tfds_text_dataset(test_data, X_columns='text', label_columns='label')\n",
-    "test_examples, test_labels = test_data.X_data, test_data.y_data"
+    "test_dataset = Dataset.from_tfds_text_dataset(test_data, X_columns=['text'], label_columns=['label'])\n",
+    "test_examples, test_labels = test_dataset.to_numpy()"
    ]
   },
   {
