--- a/notebooks/flex_text_classification_tensorflow_simplified.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_simplified.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "from flex.data import Dataset\n",
     "\n",
-    "flex_data = Dataset.from_tfds_text_dataset(train_data, X_columns='text', label_columns='label')"
+    "flex_data = Dataset.from_tfds_text_dataset(train_data, X_columns=['text'], label_columns=['label'])"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clients.map(train_tf, batch_size=512, epochs=1)"
+    "clients.map(train_tf, batch_size=512, epochs=1) # , x_dtype=bytes, y_dtype=float)"
    ]
   },
   {
@@ -230,8 +230,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data = Dataset.from_tfds_text_dataset(test_data, X_columns='text', label_columns='label')\n",
-    "test_examples, test_labels = test_data.X_data, test_data.y_data"
+    "test_dataset = Dataset.from_tfds_text_dataset(test_data, X_columns=['text'], label_columns=['label'])\n",
+    "test_examples, test_labels = test_dataset.to_numpy(x_dtype=bytes, y_dtype=float)"
    ]
   },
   {
@@ -310,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
