--- a/notebooks/flex_text_classification_huggingface_using_pure_torch_demo.ipynb
+++ b/notebooks/flex_text_classification_huggingface_using_pure_torch_demo.ipynb
@@ -110,7 +110,7 @@
     "config.n_clients = 2\n",
     "config.replacement = False # ensure that clients do not share any data\n",
     "config.client_names = ['client1', 'client2'] # Optional\n",
-    "flex_dataset = FedDataDistribution.from_config_with_huggingface_dataset(data=train_examples, config=config, X_columns='text', label_columns='label')"
+    "flex_dataset = FedDataDistribution.from_config_with_huggingface_dataset(data=train_examples, config=config, X_columns=['text'], label_columns=['label'])"
    ]
   },
   {
@@ -461,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
