improve primitives and remove logic unused in notebook

--- a/notebooks/Federated MNIST PT example with flexible decorators.ipynb
+++ b/notebooks/Federated MNIST PT example with flexible decorators.ipynb
@@ -98,7 +98,6 @@
     "    server_flex_model[\"criterion\"] = torch.nn.CrossEntropyLoss()\n",
     "    server_flex_model[\"optimizer_func\"] = torch.optim.Adam\n",
     "    server_flex_model[\"optimizer_kwargs\"] = {}\n",
-    "\n",
     "    return server_flex_model\n",
     "\n",
     "flex_pool = FlexPool.client_server_architecture(flex_dataset, init_func=build_server_model)\n",
@@ -211,20 +210,11 @@
    "source": [
     "from flex.pool import collect_clients_weights\n",
     "\n",
-    "def check_ignored_weights(name, ignore_weights=None):\n",
-    "    if ignore_weights is None:\n",
-    "        ignore_weights = ['num_batches_tracked']\n",
-    "    return any(ignored in name for ignored in ignore_weights)\n",
     "\n",
     "@collect_clients_weights\n",
     "def get_clients_weights(client_flex_model: FlexModel):\n",
-    "    parameters = []\n",
     "    weight_dict = client_flex_model[\"model\"].state_dict()\n",
-    "    for name in weight_dict:\n",
-    "        if check_ignored_weights(name):\n",
-    "            continue\n",
-    "        parameters.append(weight_dict[name].cpu().data.numpy())\n",
-    "    return parameters\n",
+    "    return [weight_dict[name].cpu().data.numpy() for name in weight_dict]\n",
     "\n",
     "aggregators.map(get_clients_weights, selected_clients)"
    ]
