provide more complex primitives and show their usage in a notebook

--- a/notebooks/Federated CIFAR10 PT example with primitives.ipynb
+++ b/notebooks/Federated CIFAR10 PT example with primitives.ipynb
@@ -168,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.primitives import deploy_server_model_pt\n",
+    "from flex.pool import deploy_server_model_pt\n",
     "\n",
     "servers.map(deploy_server_model_pt, selected_clients)"
    ]
@@ -226,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`collect_client_diff_weights_pt` as it name says, it collects weights from a set of clients. Particularly, it collects the difference between the model before and after training, that is, what the model has learnt in its local training step. Also note that the weights of the model before training are assume to be stored used `previous_model` as key in the FlexModel of a client."
+    "`collect_client_diff_weights_pt` as it name says, it collects weights from a set of clients. Particularly, it collects the difference between the model before and after training, that is, what the model has learnt in its local training step. Also note that the weights of the model before training are assume to be stored using `previous_model` as key in the FlexModel of a client."
    ]
   },
   {
@@ -235,7 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.primitives import collect_client_diff_weights_pt\n",
+    "from flex.pool import collect_client_diff_weights_pt\n",
     "\n",
     "aggregators.map(collect_client_diff_weights_pt, selected_clients)"
    ]
@@ -245,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`@aggregate_weights` simplifies the process of aggregating and the function using it expects at least one argument, a list that contains the weights collected in the step before using `@collect_clients_weights`."
+    "`fed_avg` implements the aggregator Fedeverated Average, which computes the mean of the collected weights in previous steps."
    ]
   },
   {
@@ -254,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.aggregators import fed_avg\n",
+    "from flex.pool import fed_avg\n",
     "\n",
     "aggregators.map(fed_avg)"
    ]
@@ -264,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`@set_aggregated_weights` is designed as a setter, and it sets the aggregated weights from the aggregator to the server. The function that uses it expects at least two arguments, the FlexModel at the server and the aggregated weights as returned in the last step."
+    "`set_aggregated_diff_weights_pt` adds the aggregated weights to the weights of the server, it assumes that the aggregated weights have been collected using a similar logic to `collect_client_diff_weights_pt`."
    ]
   },
   {
@@ -273,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.primitives import set_aggregated_diff_weights_pt\n",
+    "from flex.pool import set_aggregated_diff_weights_pt\n",
     "\n",
     "aggregators.map(set_aggregated_diff_weights_pt, servers)"
    ]
@@ -283,12 +283,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`@evaluate_server_model` is coded to test the server model using external data. The function that uses it must have at least one argument, the FlexModel at the server."
+    "`@evaluate_server_model` is a decorator used to test the server model. The function that uses it must have at least one argument, the FlexModel at the server.Ç"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,6 +370,7 @@
     "        pool.aggregators.map(fed_avg)\n",
     "        # The aggregator send its aggregated weights to the server\n",
     "        pool.aggregators.map(set_aggregated_diff_weights_pt, pool.servers)\n",
+    "        # Optional: evaluate the server model\n",
     "        metrics = pool.servers.map(evaluate_global_model, test_data=test_data)\n",
     "        # Optional: clean-up unused memory\n",
     "        selected_clients.map(clean_up_models)\n",
@@ -383,7 +384,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_n_rounds(20, clients_per_round=2)"
+    "train_n_rounds(20, clients_per_round=10)"
    ]
   },
   {
