Added a new notebook to show the two ways of updating the weights in a federated experiment using the Pytorch primitives.

--- a/notebooks/Two ways of updating weights with FLEXible.ipynb
+++ b/notebooks/Two ways of updating weights with FLEXible.ipynb
@@ -5,22 +5,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FLEXible tutorial: CIFAR10 classification using Pytorch\n",
+    "# FLEXible tutorial: Two types of updating weights using Pytorch\n",
     "\n",
-    "FLEXible is a library to federate models. We offer the tools to load and federate data or to load federated data, and the tools to create a federated environment. The user can define the model and the *communication primitives* to train the model in a federated environment, but we already offer decorators so that an advancer user can implement its own federated workflow. We design python decorators to handle the following federated learning flows:\n",
-    "- initialization: Initialize the model in the server.\n",
-    "- deploy model: Deploy the model to the clients.\n",
-    "- training: Define the train function.\n",
-    "- collect the weights: Collect the weights of the clients params to aggregate them later.\n",
-    "- aggregate the weights: Use an aggregation method to aggregte the collected weights.\n",
-    "- deploy model: Deploy the model with the updated weights to the clients.\n",
-    "- evaluate: Define the evaluate function.\n",
+    "FLEXible is a library to federate models. We offer the tools to load and federate data or to load federated data, and the tools to create a federated environment. The user can define the model and the *communications primitives* to train the model in a federated environment, but we already offer decorators so that an advaced user can implement its own federated workflow. In addition, we offer some primitive functions for Pytorch. Those primitives are basics functions, as we assume how the federated learning training will be. If you want to a more customizable training loop, please check the notebook \"Federated MNIST PT example with flexible decorators\", as we show there how to implement the primitive functions from scrach. \n",
     "\n",
-    "In this notebook, we show how to use the defined primitive functions, letting the user the implementation of some key functions:\n",
-    "- Define the model to train: It's necessary to tell server and clients which model will be trained.\n",
-    "- Aggregator method: In this notebook we will implement FedAvg as the aggregation function.\n",
-    "\n",
-    "Note that the primitive functions that we offer are basics functions, as we assume how the federated learning training will be. If you want to do a more customizable training loop, please check the notebook \"Federated MNIST PT example with flexible decorators\", as we show there how to implement the primitive functions from scrach. "
+    "In this notebook, we show the two types of updating the weights of the client's model in federated learning. These methods are:\n",
+    "- Updating the weights from the local models for the global weights recieved.\n",
+    "- Updating the local weights by adding the difference between the global weights recieved and the local weights from the last round."
    ]
   },
   {
@@ -41,43 +32,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First load the data, in this case we've chosen the MNIST dataset. This dataset is directy plugged onto FLEXible, so we can use the load function to get it directly federated."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.data import Dataset, FedDatasetConfig, FedDataDistribution\n",
-    "from torchvision import datasets, transforms\n",
+    "from flex.datasets import load\n",
+    "from torchvision import transforms\n",
     "\n",
-    "cifar_transforms = transforms.Compose([\n",
-    "        transforms.Resize((224,224)),\n",
-    "        transforms.ToTensor(),\n",
-    "        transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
-    "    ])\n",
+    "flex_dataset, test_data = load(\"federated_emnist\", return_test=True, split=\"digits\")\n",
     "\n",
-    "train_data = datasets.CIFAR10(\n",
-    "        root=\".\",\n",
-    "        train=True,\n",
-    "        download=True,\n",
-    "        transform=None, # Note that we do not specify transforms here, we provide them later in the training process\n",
-    ")\n",
-    "\n",
-    "test_data = datasets.CIFAR10(\n",
-    "        root=\".\",\n",
-    "        train=False,\n",
-    "        download=True,\n",
-    "        transform=cifar_transforms\n",
-    ")\n",
-    "\n",
-    "\n",
-    "config = FedDatasetConfig(seed=0)\n",
-    "config.replacement = False\n",
-    "config.n_clients = 100\n",
-    "\n",
-    "flex_dataset = FedDataDistribution.from_config(\n",
-    "                        centralized_data=Dataset.from_torchvision_dataset(train_data), \n",
-    "                        config=config\n",
-    "                )"
+    "mnist_transforms = transforms.Compose([\n",
+    "                transforms.ToTensor(),\n",
+    "                transforms.Normalize((0.5,), (0.5,))\n",
+    "        ])"
    ]
   },
   {
@@ -101,20 +76,25 @@
     "from flex.pool import FlexPool\n",
     "from flex.model import FlexModel\n",
     "\n",
-    "from torchvision.models import resnet18\n",
+    "class SimpleNet(nn.Module):\n",
+    "    def __init__(self, num_classes=10):\n",
+    "        super().__init__()\n",
+    "        self.flatten = nn.Flatten()\n",
+    "        self.fc1 = nn.Linear(28*28, 128)\n",
+    "        self.fc2 = nn.Linear(128, num_classes)\n",
     "\n",
-    "def get_model(num_classes=10):\n",
-    "    resnet_model = resnet18(weights='DEFAULT')\n",
-    "    for p in resnet_model.parameters():\n",
-    "        p.requires_grad = False\n",
-    "    resnet_model.fc = torch.nn.Linear(resnet_model.fc.in_features, num_classes)\n",
-    "    return resnet_model\n",
+    "    def forward(self, x):\n",
+    "        x = self.flatten(x)\n",
+    "        x = self.fc1(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.fc2(x)\n",
+    "        return F.log_softmax(x, dim=1)\n",
     "\n",
     "@init_server_model\n",
     "def build_server_model():\n",
     "    server_flex_model = FlexModel()\n",
     "\n",
-    "    server_flex_model[\"model\"] = get_model()\n",
+    "    server_flex_model[\"model\"] = SimpleNet()\n",
     "    # Required to store this for later stages of the FL training process\n",
     "    server_flex_model[\"criterion\"] = torch.nn.CrossEntropyLoss()\n",
     "    server_flex_model[\"optimizer_func\"] = torch.optim.Adam\n",
@@ -168,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool import deploy_server_model_pt\n",
+    "from flex.pool.primitives import deploy_server_model_pt\n",
     "\n",
     "servers.map(deploy_server_model_pt, selected_clients)"
    ]
@@ -178,7 +158,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Suprisingly, there is no decorator for the training process as it can be imnplemented directly."
+    "## Two ways of updateing the weights of the client's model.\n",
+    "\n",
+    "Suprisingly, there is no decorator for the training process as it can be imnplemented directly. In this notebook we present primitives for both ways of updating the weights when using Pytorch, so the user can use them without needing to implement a new one, but if a different way of updating the weights it's needed, it can be created using the decorators for collecting and sendings weights. For more info check the notebook **Federated MNIST PT example with flexible decorators**, where we show how to create your own primitives.\n",
+    "\n",
+    "### Updating the weights from the local models for the global weights recieved.\n",
+    "\n",
+    "First we show how to update the weights by just changing the weights by the new ones."
    ]
   },
   {
@@ -193,7 +179,160 @@
     "from tqdm import tqdm\n",
     "\n",
     "def train(client_flex_model: FlexModel, client_data: Dataset):\n",
-    "    train_dataset = client_data.to_torchvision_dataset(transform=cifar_transforms)\n",
+    "    train_dataset = client_data.to_torchvision_dataset(transform=mnist_transforms)\n",
+    "    client_dataloader = DataLoader(train_dataset, batch_size=64)\n",
+    "    model = client_flex_model[\"model\"]\n",
+    "    # client_flex_model['previous_model'] = deepcopy(model) # Required to use `collect_client_diff_weights_pt` primitive\n",
+    "    optimizer = client_flex_model['optimizer_func'](model.parameters(), **client_flex_model[\"optimizer_kwargs\"])\n",
+    "    model = model.train()\n",
+    "    model = model.to(device)\n",
+    "    criterion = client_flex_model[\"criterion\"]\n",
+    "    epochs = 5\n",
+    "    for _ in tqdm(range(epochs)):\n",
+    "        for imgs, labels in client_dataloader:\n",
+    "            imgs, labels = imgs.to(device), labels.to(device)\n",
+    "            optimizer.zero_grad()\n",
+    "            pred = model(imgs)\n",
+    "            loss = criterion(pred, labels)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_clients.map(train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The primitives for updating the weights by just changing one weights for other are `collect_clients_weights_pt` and `set_aggregated_weights_pt`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flex.pool import collect_clients_weights_pt, set_aggregated_weights_pt\n",
+    "\n",
+    "aggregators.map(collect_clients_weights_pt, selected_clients)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`fed_avg` implements the aggregator Fedeverated Average, which computes the mean of the collected weights in previous steps."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flex.pool import fed_avg\n",
+    "\n",
+    "aggregators.map(fed_avg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once the weights are aggregated, we can send them to the clients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aggregators.map(set_aggregated_weights_pt, servers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`@evaluate_server_model` is a decorator used to test the server model. The function that uses it must have at least one argument, the FlexModel at the server."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flex.pool import evaluate_server_model\n",
+    "\n",
+    "@evaluate_server_model\n",
+    "def evaluate_global_model(server_flex_model: FlexModel, test_data=None):\n",
+    "    model = server_flex_model[\"model\"]\n",
+    "    model.eval()\n",
+    "    test_loss = 0\n",
+    "    test_acc = 0\n",
+    "    total_count = 0\n",
+    "    model = model.to(device)\n",
+    "    criterion=server_flex_model['criterion']\n",
+    "    # get test data as a torchvision object\n",
+    "    test_dataset = test_data.to_torchvision_dataset(transform=mnist_transforms)\n",
+    "    test_dataloader = DataLoader(test_dataset, batch_size=256, shuffle=True, pin_memory=False)\n",
+    "    losses = []\n",
+    "    with torch.no_grad():\n",
+    "        for data, target in test_dataloader:\n",
+    "            total_count += target.size(0)\n",
+    "            data, target = data.to(device), target.to(device)\n",
+    "            output = model(data)\n",
+    "            losses.append(criterion(output, target).item())\n",
+    "            pred = output.data.max(1, keepdim=True)[1]\n",
+    "            test_acc += pred.eq(target.data.view_as(pred)).long().cpu().sum().item()\n",
+    "\n",
+    "    test_loss = sum(losses) / len(losses)\n",
+    "    test_acc /= total_count\n",
+    "    return test_loss, test_acc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics = servers.map(evaluate_global_model, test_data=test_data)\n",
+    "print(metrics[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Updating the weights by calculating the difference between the global and the local model.\n",
+    "\n",
+    "Lastly, we show the process on how to update the weights by calculating the diference between the global model and the local model of the clients. To do so, we need to add a new key to the client's FlexModel, *previous_model*, to copy the global model recieved by the last round."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flex.data import Dataset\n",
+    "from torch.utils.data import DataLoader\n",
+    "from copy import deepcopy\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "def train(client_flex_model: FlexModel, client_data: Dataset):\n",
+    "    train_dataset = client_data.to_torchvision_dataset(transform=mnist_transforms)\n",
     "    client_dataloader = DataLoader(train_dataset, batch_size=64)\n",
     "    model = client_flex_model[\"model\"]\n",
     "    client_flex_model['previous_model'] = deepcopy(model) # Required to use `collect_client_diff_weights_pt` primitive\n",
@@ -245,7 +384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`fed_avg` implements the aggregator Fedeverated Average, which computes the mean of the collected weights in previous steps."
+    "We also use the `fed_avg` aggregator."
    ]
   },
   {
@@ -283,41 +422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`@evaluate_server_model` is a decorator used to test the server model. The function that uses it must have at least one argument, the FlexModel at the server.Ç"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from flex.pool import evaluate_server_model\n",
-    "\n",
-    "@evaluate_server_model\n",
-    "def evaluate_global_model(server_flex_model: FlexModel, test_data=None):\n",
-    "    model = server_flex_model[\"model\"]\n",
-    "    model.eval()\n",
-    "    test_loss = 0\n",
-    "    test_acc = 0\n",
-    "    total_count = 0\n",
-    "    model = model.to(device)\n",
-    "    criterion=server_flex_model['criterion']\n",
-    "    # get test data as a torchvision object\n",
-    "    test_dataloader = DataLoader(test_data, batch_size=256, shuffle=True, pin_memory=False)\n",
-    "    losses = []\n",
-    "    with torch.no_grad():\n",
-    "        for data, target in tqdm(test_dataloader):\n",
-    "            total_count += target.size(0)\n",
-    "            data, target = data.to(device), target.to(device)\n",
-    "            output = model(data)\n",
-    "            losses.append(criterion(output, target).item())\n",
-    "            pred = output.data.max(1, keepdim=True)[1]\n",
-    "            test_acc += pred.eq(target.data.view_as(pred)).long().cpu().sum().item()\n",
-    "\n",
-    "    test_loss = sum(losses) / len(losses)\n",
-    "    test_acc /= total_count\n",
-    "    return test_loss, test_acc"
+    "To evaluate the server model, we use the same function created in the last section."
    ]
   },
   {
@@ -386,13 +491,6 @@
    "source": [
     "train_n_rounds(20, clients_per_round=10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
