update notebooks to work with pytorch properly

--- a/notebooks/Federated MNIST PT example with flexible decorators.ipynb
+++ b/notebooks/Federated MNIST PT example with flexible decorators.ipynb
@@ -263,10 +263,11 @@
     "@set_aggregated_weights\n",
     "def set_agreggated_weights_to_server(server_flex_model: FlexModel, aggregated_weights):\n",
     "    with torch.no_grad():\n",
-    "        for old, new in zip(\n",
-    "            server_flex_model[\"model\"].parameters(), aggregated_weights\n",
+    "        weight_dict = server_flex_model[\"model\"].state_dict()\n",
+    "        for layer_key, new in zip(\n",
+    "            weight_dict, aggregated_weights\n",
     "        ):\n",
-    "            old.data = torch.from_numpy(new).float()\n",
+    "            weight_dict[layer_key].copy_(torch.from_numpy(new).float())\n",
     "\n",
     "aggregators.map(set_agreggated_weights_to_server, servers)"
    ]
