--- a/notebooks/Federated MNIST PT example with simplified primitives.ipynb
+++ b/notebooks/Federated MNIST PT example with simplified primitives.ipynb
@@ -140,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`@deploy_server_model` is a decorator designed to copy the model from the server to the clients at each federated learning round. The function that uses it, must have at least one argument, which is the FlexModel object that stores the model at the server."
+    "`deploy_server_model_pt` generates a copy of server FlexModel and sets it to clients. It is designed to work with Pytorch models."
    ]
   },
   {
@@ -149,7 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.primitives import deploy_server_model_pt\n",
+    "from flex.pool import deploy_server_model_pt\n",
     "\n",
     "servers.map(deploy_server_model_pt, selected_clients)"
    ]
@@ -159,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Suprisingly, there is no decorator for the training process as it can be imnplemented directly."
+    "As with decorators, there is no primitive for training as it can be implemented without any significant change or boilerplate."
    ]
   },
   {
@@ -196,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`@collect_clients_weights` as it name says, it collects weights from a set of clients, the function that uses it must have at least one argument, the FlexModel from each client, and it is expected to return the weights of her model."
+    "`collect_clients_weights_pt`, function that collect the weights for a PyTorch model and stores it as a list in the FlexModel of the aggregators using the key `weights`. "
    ]
   },
   {
@@ -205,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.primitives import collect_clients_weights_pt\n",
+    "from flex.pool import collect_clients_weights_pt\n",
     "\n",
     "aggregators.map(collect_clients_weights_pt, selected_clients)"
    ]
@@ -215,7 +215,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`@aggregate_weights` simplifies the process of aggregating and the function using it expects at least one argument, a list that contains the weights collected in the step before using `@collect_clients_weights`."
+    "`fed_avg` aggregates the weights stored in key `weights`, and stores the aggregated result using they key `aggregated_weights` in the FlexModel. Note that, in client server architectures the aggregator is the same actor as the server, so the following is equivalent to:\n",
+    "`servers.map(fed_avg)`."
    ]
   },
   {
@@ -224,7 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.aggregators import fed_avg\n",
+    "from flex.pool import fed_avg\n",
     "\n",
     "aggregators.map(fed_avg)"
    ]
@@ -234,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`@set_aggregated_weights` is designed as a setter, and it sets the aggregated weights from the aggregator to the server. The function that uses it expects at least two arguments, the FlexModel at the server and the aggregated weights as returned in the last step."
+    "`set_aggregated_weights_pt` is designed as a setter, and it sets the aggregated weights from the aggregator to the server. This function is designed to work with Pytorch models."
    ]
   },
   {
@@ -243,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.primitives import set_aggregated_weights_pt\n",
+    "from flex.pool import set_aggregated_weights_pt\n",
     "\n",
     "aggregators.map(set_aggregated_weights_pt, servers)"
    ]
