add tensorly to allow aggregator to be coded independently of the framework

--- a/notebooks/Federated CIFAR10 PT example with primitives.ipynb
+++ b/notebooks/Federated CIFAR10 PT example with primitives.ipynb
@@ -114,7 +114,7 @@
     "def build_server_model():\n",
     "    server_flex_model = FlexModel()\n",
     "\n",
-    "    server_flex_model[\"model\"] = get_model()\n",
+    "    server_flex_model[\"model\"] = get_model().to(device)\n",
     "    # Required to store this for later stages of the FL training process\n",
     "    server_flex_model[\"criterion\"] = torch.nn.CrossEntropyLoss()\n",
     "    server_flex_model[\"optimizer_func\"] = torch.optim.Adam\n",
@@ -196,10 +196,10 @@
     "    train_dataset = client_data.to_torchvision_dataset(transform=cifar_transforms)\n",
     "    client_dataloader = DataLoader(train_dataset, batch_size=64)\n",
     "    model = client_flex_model[\"model\"]\n",
+    "    model = model.to(device)\n",
     "    client_flex_model['previous_model'] = deepcopy(model) # Required to use `collect_client_diff_weights_pt` primitive\n",
     "    optimizer = client_flex_model['optimizer_func'](model.parameters(), **client_flex_model[\"optimizer_kwargs\"])\n",
     "    model = model.train()\n",
-    "    model = model.to(device)\n",
     "    criterion = client_flex_model[\"criterion\"]\n",
     "    epochs = 5\n",
     "    for _ in tqdm(range(epochs)):\n",
@@ -283,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`@evaluate_server_model` is a decorator used to test the server model. The function that uses it must have at least one argument, the FlexModel at the server.Ç"
+    "`@evaluate_server_model` is a decorator used to test the server model. The function that uses it must have at least one argument, the FlexModel at the server."
    ]
   },
   {
@@ -350,8 +350,7 @@
     "# Auxiliar function to clear unused gpu mem in clients\n",
     "def clean_up_models(client_model: FlexModel, _):\n",
     "    import gc\n",
-    "    del client_model[\"model\"]\n",
-    "    del client_model[\"previous_model\"]\n",
+    "    client_model.clear()\n",
     "    gc.collect()\n",
     "\n",
     "def train_n_rounds(n_rounds, clients_per_round=20):  \n",
