--- a/notebooks/Federated MNIST TF example with flexible decorators.ipynb
+++ b/notebooks/Federated MNIST TF example with flexible decorators.ipynb
@@ -218,11 +218,18 @@
    "outputs": [],
    "source": [
     "from flex.pool import aggregate_weights\n",
-    "import numpy as np\n",
+    "import tensorly as tl\n",
+    "\n",
+    "tl.set_backend('tensorflow')\n",
     "\n",
     "@aggregate_weights\n",
     "def aggregate_with_fedavg(list_of_weights: list):\n",
-    "    return np.mean(np.array(list_of_weights, dtype=object), axis=0)\n",
+    "    agg_weights = []\n",
+    "    for layer_index in range(len(list_of_weights[0])):\n",
+    "        weights_per_layer = tl.stack([weights[layer_index] for weights in list_of_weights])\n",
+    "        agg_layer = tl.mean(weights_per_layer, axis=0)\n",
+    "        agg_weights.append(agg_layer)\n",
+    "    return agg_weights\n",
     "\n",
     "# Aggregate weights\n",
     "aggregators.map(aggregate_with_fedavg)"
