--- a/notebooks/Federated MNIST PT example with flexible decorators.ipynb
+++ b/notebooks/Federated MNIST PT example with flexible decorators.ipynb
@@ -214,7 +214,7 @@
     "@collect_clients_weights\n",
     "def get_clients_weights(client_flex_model: FlexModel):\n",
     "    weight_dict = client_flex_model[\"model\"].state_dict()\n",
-    "    return [weight_dict[name].cpu().data.numpy() for name in weight_dict]\n",
+    "    return [weight_dict[name] for name in weight_dict]\n",
     "\n",
     "aggregators.map(get_clients_weights, selected_clients)"
    ]
@@ -234,11 +234,19 @@
    "outputs": [],
    "source": [
     "from flex.pool import aggregate_weights\n",
-    "import numpy as np\n",
+    "import tensorly as tl\n",
+    "\n",
+    "tl.set_backend('pytorch')\n",
     "\n",
     "@aggregate_weights\n",
     "def aggregate_with_fedavg(list_of_weights: list):\n",
-    "    return np.mean(np.array(list_of_weights, dtype=object), axis=0)\n",
+    "    agg_weights = []\n",
+    "    for layer_index in range(len(list_of_weights[0])):\n",
+    "        weights_per_layer = [weights[layer_index] for weights in list_of_weights]\n",
+    "        weights_per_layer = tl.stack(weights_per_layer)\n",
+    "        agg_layer = tl.mean(weights_per_layer, axis=0)\n",
+    "        agg_weights.append(agg_layer)\n",
+    "    return agg_weights\n",
     "\n",
     "# Aggregate weights\n",
     "aggregators.map(aggregate_with_fedavg)"
@@ -267,7 +275,7 @@
     "        for layer_key, new in zip(\n",
     "            weight_dict, aggregated_weights\n",
     "        ):\n",
-    "            weight_dict[layer_key].copy_(torch.from_numpy(new).float())\n",
+    "            weight_dict[layer_key].copy_(new)\n",
     "\n",
     "aggregators.map(set_agreggated_weights_to_server, servers)"
    ]
@@ -310,7 +318,7 @@
     "            pred = output.data.max(1, keepdim=True)[1]\n",
     "            test_acc += pred.eq(target.data.view_as(pred)).long().cpu().sum().item()\n",
     "\n",
-    "    test_loss = np.mean(losses)\n",
+    "    test_loss = sum(losses)/len(losses)\n",
     "    test_acc /= total_count\n",
     "    return test_loss, test_acc\n",
     "\n",
